[package]
name = "symfony_translations_checker"
version = "0.1.0"
authors = ["Arthur Woimbée <arthur.woimbee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4"
ansi_term = "0.12.1"
rayon = "1.3"
clap = "2.33"
